# game-mode

./: .gitignore  AGENTS.md  BUILD_GUIDE.md  CLAUDE.md  README.md  eslint.config.mjs  package-lock.json  package.json  release.sh  tailwind.config.ts
.github/workflows/: build.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: theme-provider.tsx
src/hooks/: useSystemMonitor.ts
src/services/: gameModeService.ts
src/store/: useGameModeStore.ts
