[package]
name = "game-mode"
version = "0.1.0"
description = "Windows Gaming Optimizer"
authors = ["Game Mode"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "game_mode_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
tauri-plugin-store = "2"
sysinfo = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase", "winnt", "processthreadsapi", "tlhelp32", "psapi"] }
